--- a/client/src/pages/Projects/Projects.module.css
+++ b/client/src/pages/Projects/Projects.module.css
@@ -7,7 +7,7 @@
   
   .pageTitle {
     font-size: 6rem;
-    color: #333;
+    color: #26471a;
     line-height: 1.6;
     max-width: 800px;
     margin: 0 auto 0;
@@ -15,7 +15,7 @@
   }
 
   .description {
-    color: #333;
+    color: #26471a;
     font-size: 1.25rem;
     line-height: 1.6;
     max-width: 800px;
